agrego funciones con lambda

--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,7 +98,7 @@
         },
         "outputId": "8bb88d86-3dbc-4f92-a454-534c208c1b0a"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +132,7 @@
         },
         "outputId": "a872cdb7-78c6-4b86-c3f5-62fe29887f2a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -165,7 +166,7 @@
       "metadata": {
         "id": "k0T4fvtGuzi9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -184,7 +185,7 @@
         },
         "outputId": "f97127fe-be48-4cdf-ba86-792c93378a28"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +214,7 @@
       "metadata": {
         "id": "zKVkpnrkuzzN"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -224,7 +225,7 @@
       "metadata": {
         "id": "b9N_XqUUyCOq"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -259,7 +260,7 @@
       "metadata": {
         "id": "hXFwrecUu1kI"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -271,7 +272,7 @@
       "metadata": {
         "id": "f-ct3szSu1m9"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -288,7 +289,7 @@
         },
         "outputId": "725f65b4-c566-4155-c082-322074017c70"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -321,7 +322,7 @@
       "metadata": {
         "id": "DqL41eweMDIn"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -333,7 +334,7 @@
       "metadata": {
         "id": "0mLdAvJbMDvQ"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -357,7 +358,7 @@
       "metadata": {
         "id": "ipPyz0UGMFvX"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -374,7 +375,7 @@
         "id": "f3MWkAbQMF5F",
         "outputId": "1d5d2d85-c155-4cc5-ead2-c9b00775bbc2"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -403,7 +404,7 @@
         "id": "vIfe8RteRZDO",
         "outputId": "cc375dc2-3a0d-48ab-e756-9133cc882c0d"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -760,7 +761,7 @@
       "metadata": {
         "id": "WQ-pCgdaMOlc"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -778,7 +779,7 @@
         },
         "outputId": "abb4cd7e-5af5-4a1d-e22b-84a8f59d2731"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -802,7 +803,7 @@
         },
         "outputId": "e9102add-712b-4db1-abbd-db68d459a73e"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -836,7 +837,7 @@
         },
         "outputId": "367cfece-f3d6-4a67-bae3-8c52dd8d54c8"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -867,7 +868,7 @@
         },
         "outputId": "a24d0447-b207-434c-d075-6c7c74b68298"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -895,7 +896,7 @@
         "id": "6ERllaahdLHC",
         "outputId": "a9456b44-3051-45b3-bb85-a7ed99e1864f"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -955,7 +956,7 @@
       "metadata": {
         "id": "WgWoULpnMSrT"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -971,7 +972,7 @@
         },
         "outputId": "898474c4-7767-4316-e66b-d8eae8a310b1"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1009,7 +1010,7 @@
       "metadata": {
         "id": "1QHJXCYsMUx3"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1024,7 +1025,7 @@
         },
         "outputId": "5512c8ca-b200-446a-97dd-c01f9eb31cfd"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1049,7 +1050,7 @@
         },
         "outputId": "32896e50-cfc6-428b-9910-55599682240d"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1087,7 +1088,7 @@
       "metadata": {
         "id": "U4MlTO9ucAKc"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1100,7 +1101,7 @@
       "metadata": {
         "id": "ZrqyDBNFMYOK"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1115,7 +1116,7 @@
         },
         "outputId": "f289f231-e64a-41dc-dd13-0d2441181ac6"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1139,7 +1140,7 @@
         },
         "outputId": "4f21c6f6-3a66-4e55-fac0-703d8d0de8f1"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1162,7 +1163,7 @@
         "id": "2ORybKW_iUnG",
         "outputId": "f9625360-607c-4761-83f2-a4ccc8659aeb"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1232,7 +1233,7 @@
       "metadata": {
         "id": "GlWdnX7Ubgl3"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1245,7 +1246,7 @@
       "metadata": {
         "id": "JdMFsT9GMgI6"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1260,7 +1261,7 @@
         },
         "outputId": "2649db36-10c5-431b-d62b-1f8d9fc9cdcc"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1282,7 +1283,7 @@
       "metadata": {
         "id": "35zC247QMgRP"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1297,7 +1298,7 @@
         },
         "outputId": "6f7b6449-1e15-4705-b51a-827e71adf181"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1323,7 +1324,7 @@
         "id": "zT1zWcH8nZve",
         "outputId": "e6c91152-14c6-4a8d-e373-5d32caa6bae2"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1363,7 +1364,7 @@
       "metadata": {
         "id": "3saGo2kDf0BY"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1380,7 +1381,7 @@
       "metadata": {
         "id": "unNLrdFjMjbv"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1395,7 +1396,7 @@
         },
         "outputId": "f63c8d7c-58be-4204-f959-cea40a6aafbc"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1418,7 +1419,7 @@
       "metadata": {
         "id": "jCYuFpmeMji6"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1434,7 +1435,7 @@
         },
         "outputId": "f7bed4a7-5ca7-4a6f-cc75-e79b8c7229cd"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1453,7 +1454,7 @@
       "metadata": {
         "id": "4F1ATgty-ENE"
       },
-      "execution_count": 82,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -1472,7 +1473,7 @@
       "metadata": {
         "id": "tLdjCulMMjnD"
       },
-      "execution_count": 83,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -1482,13 +1483,13 @@
       ],
       "metadata": {
         "id": "MugqKrwz9UEu",
-        "outputId": "27c1c145-58e4-4e15-d859-c31303d06234",
+        "outputId": "0d66a136-8055-4060-a992-9660605e999c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         }
       },
-      "execution_count": 84,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1501,7 +1502,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 84
+          "execution_count": 6
         }
       ]
     },
@@ -1526,21 +1527,79 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota_=float(input('Ingrese la nota del estudiante: '))\n",
+        "\n",
+        "def cualitativa(nota):\n",
+        "  return nota+0.5\n",
+        "\n",
+        "cualitativa(nota_)"
+      ],
       "metadata": {
-        "id": "wcNxDJoPMmTJ"
+        "id": "wcNxDJoPMmTJ",
+        "outputId": "252b1e7e-5714-4318-a505-a3462603a273",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Ingrese la nota del estudiante: 6\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#con lambda\n",
+        "nota_=float(input('Ingrese la nota del estudiante: '))\n",
+        "\n",
+        "cualitativa = lambda x: x+0.5\n",
+        "\n",
+        "cualitativa(nota_)"
+      ],
       "metadata": {
-        "id": "S-baAoaQMmVy"
+        "id": "S-baAoaQMmVy",
+        "outputId": "0592973d-dd39-4220-d976-177de239df05",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Ingrese la nota del estudiante: 6\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1567,18 +1626,67 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota1=float(input('Ingrese primera nota: '))\n",
+        "nota2=float(input('Ingrese segunda nota: '))\n",
+        "nota3=float(input('Ingrese tercera nota: '))\n",
+        "\n",
+        "ponderado = lambda x,y,z: (x*3+y*2+z*5)/10\n",
+        "\n",
+        "nota_final=ponderado(nota1,nota2,nota3)"
+      ],
       "metadata": {
-        "id": "6YxEn9aiMnYJ"
+        "id": "6YxEn9aiMnYJ",
+        "outputId": "afa9c43a-a626-4efc-bc2e-95506a2d9bfa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Ingrese primera nota: 7\n",
+            "Ingrese segunda nota: 8\n",
+            "Ingrese tercera nota: 9.6\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(f\"El promedio ponderado del estudiante es: {nota_final}.\")"
+      ],
       "metadata": {
-        "id": "Ptn9gQaPMnaz"
+        "id": "Ptn9gQaPMnaz",
+        "outputId": "044ad39e-9e75-4079-ccfc-2ac86fc30371",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El promedio ponderado del estudiante es: 8.5.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Notas del estudiante\n",
+        "notas = [6.0, 7.0, 9.0, 5.5, 8.0]\n",
+        "cualitativo = 0.5"
+      ],
+      "metadata": {
+        "id": "RdoaWhuVI_OB"
       },
       "execution_count": null,
       "outputs": []
@@ -1603,30 +1711,62 @@
     {
       "cell_type": "code",
       "source": [
-        "# Notas del estudiante\n",
-        "notas = [6.0, 7.0, 9.0, 5.5, 8.0]\n",
-        "cualitativo = 0.5"
+        "notas=[6.0,7-0,9.0,5.5,8.0]\n",
+        "cualitativo=0.5"
       ],
-      "metadata": {
-        "id": "RdoaWhuVI_OB"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
       "metadata": {
         "id": "PzDfbv-kMq2t"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "notas_actualizadas=lambda x: x+0.5"
+      ],
       "metadata": {
-        "id": "3YDQ39wFMq5u"
+        "id": "Aw39cg_Zt321"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "notas_actualizadas(notas)"
+      ],
+      "metadata": {
+        "id": "slA5-Rskt3Ay",
+        "outputId": "359fe4d5-43c7-4fb8-a74b-5e4243ed1e88",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 193
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "can only concatenate list (not \"float\") to list",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-29-de6832024cbc>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnotas_actualizadas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnotas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-28-f73056170c67>\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(x)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnotas_actualizadas\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"float\") to list"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ************** Lanza error ya que se deben mapear los valores para que lambda asuma valores flotantes"
+      ],
+      "metadata": {
+        "id": "hnumcX6Uuk7S"
       },
       "execution_count": null,
       "outputs": []
@@ -1648,21 +1788,73 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "notas_actualizadas=map(lambda x: x+0.5,notas)"
+      ],
       "metadata": {
-        "id": "ZbfpvfWJMsjv"
+        "id": "3YDQ39wFMq5u"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#al consultar la variable, nos indica que\n",
+        "#la variable esta mapeada y nos indica la direccion de memoria donde se encuentra el dato\n",
+        "notas_actualizadas"
+      ],
       "metadata": {
-        "id": "TA-zGLJfMseA"
+        "id": "ZbfpvfWJMsjv",
+        "outputId": "e28f9012-e4e5-42e3-d47c-971c59f9bc31",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<map at 0x7e969bf7ace0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#vamos a buscar el dato en la direccion de memoria, capturamos el valor en una variable\n",
+        "notas_actualizadas=list(notas_actualizadas)\n",
+        "\n",
+        "print(f'notas actualizadas: {notas_actualizadas}')\n",
+        "print(f'notas iniciales: {notas}')\n",
+        "\n",
+        "# de esta forma se obtiene el valor de una sola vez\n",
+        "#     notas_actualizadas=list(map(lambda x: x+0.5,notas))"
+      ],
+      "metadata": {
+        "id": "TA-zGLJfMseA",
+        "outputId": "41a7f056-690d-4bc7-99ca-496a6293dc81",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "notas actualizadas: [6.5, 7.5, 9.5, 6.0, 8.5]\n",
+            "notas iniciales: [6.0, 7, 9.0, 5.5, 8.0]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1670,7 +1862,7 @@
       "metadata": {
         "id": "PrAppvR6MuKm"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
