Agregando encabezado ejercicios

--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -1537,10 +1537,10 @@
       ],
       "metadata": {
         "id": "wcNxDJoPMmTJ",
-        "outputId": "252b1e7e-5714-4318-a505-a3462603a273",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "252b1e7e-5714-4318-a505-a3462603a273"
       },
       "execution_count": 9,
       "outputs": [
@@ -1575,10 +1575,10 @@
       ],
       "metadata": {
         "id": "S-baAoaQMmVy",
-        "outputId": "0592973d-dd39-4220-d976-177de239df05",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0592973d-dd39-4220-d976-177de239df05"
       },
       "execution_count": 10,
       "outputs": [
@@ -1637,10 +1637,10 @@
       ],
       "metadata": {
         "id": "6YxEn9aiMnYJ",
-        "outputId": "afa9c43a-a626-4efc-bc2e-95506a2d9bfa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "afa9c43a-a626-4efc-bc2e-95506a2d9bfa"
       },
       "execution_count": 21,
       "outputs": [
@@ -1662,10 +1662,10 @@
       ],
       "metadata": {
         "id": "Ptn9gQaPMnaz",
-        "outputId": "044ad39e-9e75-4079-ccfc-2ac86fc30371",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "044ad39e-9e75-4079-ccfc-2ac86fc30371"
       },
       "execution_count": 24,
       "outputs": [
@@ -1717,7 +1717,7 @@
       "metadata": {
         "id": "PzDfbv-kMq2t"
       },
-      "execution_count": 25,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -1728,7 +1728,7 @@
       "metadata": {
         "id": "Aw39cg_Zt321"
       },
-      "execution_count": 28,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -1737,14 +1737,14 @@
         "notas_actualizadas(notas)"
       ],
       "metadata": {
-        "id": "slA5-Rskt3Ay",
-        "outputId": "359fe4d5-43c7-4fb8-a74b-5e4243ed1e88",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 193
-        }
+        },
+        "id": "slA5-Rskt3Ay",
+        "outputId": "71b82689-9fc5-443b-d125-37e7ca9b4e54"
       },
-      "execution_count": 29,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "error",
@@ -1753,8 +1753,8 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-29-de6832024cbc>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnotas_actualizadas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnotas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-28-f73056170c67>\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(x)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnotas_actualizadas\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-4-de6832024cbc>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnotas_actualizadas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnotas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-3-f73056170c67>\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(x)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnotas_actualizadas\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"float\") to list"
           ]
         }
@@ -1794,7 +1794,7 @@
       "metadata": {
         "id": "3YDQ39wFMq5u"
       },
-      "execution_count": 30,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -1806,22 +1806,22 @@
       ],
       "metadata": {
         "id": "ZbfpvfWJMsjv",
-        "outputId": "e28f9012-e4e5-42e3-d47c-971c59f9bc31",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fdb43f9e-bae6-4b97-c660-78c26971d504"
       },
-      "execution_count": 31,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<map at 0x7e969bf7ace0>"
+              "<map at 0x7a96108e05b0>"
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 6
         }
       ]
     },
@@ -1834,17 +1834,19 @@
         "print(f'notas actualizadas: {notas_actualizadas}')\n",
         "print(f'notas iniciales: {notas}')\n",
         "\n",
+        "# *******************************************************\n",
         "# de esta forma se obtiene el valor de una sola vez\n",
+        "# *******************************************************\n",
         "#     notas_actualizadas=list(map(lambda x: x+0.5,notas))"
       ],
       "metadata": {
         "id": "TA-zGLJfMseA",
-        "outputId": "41a7f056-690d-4bc7-99ca-496a6293dc81",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fa792a84-85b0-469e-ad85-ead885eb24a4"
       },
-      "execution_count": 36,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1858,11 +1860,214 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#convirtiendo temperaturas, convertir lista de grados celcius a lista en farenheit\n",
+        "temp_celsius = [0, 25, 37, 78, 100]\n",
+        "temp_fahrenheit = list(map(lambda x: (x * 9/5) + 32, temp_celsius))\n",
+        "temp_fahrenheit\n",
+        "#La función map() se usa aquí para aplicar la fórmula de conversión de Celsius a Fahrenheit a cada elemento de la lista temp_celsius. La función lambda se utiliza para definir la fórmula.\n"
+      ],
       "metadata": {
-        "id": "PrAppvR6MuKm"
+        "id": "UN8Ti41d0nlx",
+        "outputId": "db4ad42b-d484-47da-99d8-a45cfb6db8fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 24,
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[32.0, 77.0, 98.6, 172.4, 212.0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#####------------------- Ejercicios ------------------------------\n",
+        "#1. Escribe un código que lee la lista siguiente y realiza:\n",
+        "# 1. Leer el tamaño de la lista\n",
+        "# 2. Leer el valor máximo y mínimo\n",
+        "# 3. Calcular la suma de los valores de la lista\n",
+        "# 4. Mostrar un mensaje al final: La lista tiene `tamano` números, donde el mayor\n",
+        "# es `mayor` y el menor es `menor`. La suma de los valores es `suma`.\n",
+        "lista = [16, 14, 63, 65, 17, 99, 70, 11, 20, 48, 79, 32, 17, 89, 12, 25, 66]"
+      ],
+      "metadata": {
+        "id": "J24VXtFo5mVo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#2 - Escribe una función que genere la tabla de multiplicar de un número entero del 1 al 10,\n",
+        "#según la elección del usuario. Como ejemplo, para el número 7, la tabla de multiplicar se debe mostrar en el siguiente formato:\n",
+        "# Tabla del  7:\n",
+        "# 7 x 0 = 0\n",
+        "# 7 x 1 = 7\n",
+        "# [...]\n",
+        "# 7 x 10 = 70\n"
+      ],
+      "metadata": {
+        "id": "NJCd0dFZ5pnI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#3 - Crea una función que lea la siguiente lista y devuelva una nueva lista con los múltiplos de 3:\n",
+        "#[97, 80, 94, 88, 80, 1, 16, 53, 62, 32, 24, 99]"
+      ],
+      "metadata": {
+        "id": "XQp1LOCZ5mNw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#4 - Crea una lista de los cuadrados de los números de la siguiente lista [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]. Recuerda utilizar las funciones lambda y map() para calcular el\n",
+        "#cuadrado de cada elemento de la lista."
+      ],
+      "metadata": {
+        "id": "z7Hj0IPG5mGy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#       Aplicando a proyectos\n",
+        "#\n",
+        "#5 - Has sido contratado como científico(a) de datos de una asociación de skate. Para analizar\n",
+        "#las notas recibidas por los skaters en algunas competiciones a lo largo del año, necesitas crear un código que calcule la puntuación de los atletas. Para ello, tu código debe recibir 5 notas ingresadas por los jueces."
+      ],
+      "metadata": {
+        "id": "73a8tHou5l-S"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#6 - Para cumplir con una demanda de una institución educativa para el análisis del rendimiento de sus\n",
+        "#estudiantes, necesitas crear una función que reciba una lista de 4 notas y devuelva:\n",
+        "# mayor nota\n",
+        "# menor nota\n",
+        "# media\n",
+        "# situación (Aprobado(a) o Reprobado(a))\n",
+        "# Uso de la función\n",
+        "# Mostrar: El estudiante obtuvo una media de `media`, con la mayor nota de `mayor` puntos y la menor nota de `menor` puntos y fue `situacion`.)"
+      ],
+      "metadata": {
+        "id": "7UmeVLpv5l1o"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#7 - Has recibido una demanda para tratar 2 listas con los nombres y apellidos de cada estudiante\n",
+        "# concatenándolos para presentar sus nombres completos en la forma Nombre Apellido. Las listas son:\n",
+        "nombres = [\"juan\", \"MaRia\", \"JOSÉ\"]\n",
+        "apellidos = [\"SILVA\", \"sosa\", \"Tavares\"]\n",
+        "\n",
+        "# Normalizar nombres y apellidos y crear una nueva lista con los nombres completos\n",
+        "# Puedes apoyarte en la función map()"
+      ],
+      "metadata": {
+        "id": "DR9cntf75ltq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ***************\n",
+        "# 8- Como científico de datos en un equipo de fútbol, necesitas implementar nuevas formas de recopilación de datos\n",
+        "#    sobre el rendimiento de los jugadores y del equipo en su conjunto. Tu primera acción es crear una forma de calcular\n",
+        "#    la puntuación del equipo en el campeonato nacional a partir de los datos de goles marcados y recibidos en cada juego.\n",
+        "#\n",
+        "#    Escribe una función llamada calcula_puntos() que recibe como parámetros dos listas de números enteros,\n",
+        "#       representando los goles marcados y recibidos por el equipo en cada partido del campeonato.\n",
+        "#    La función debe devolver la puntuación del equipo y el rendimiento en porcentaje,\n",
+        "#       teniendo en cuenta que la victoria vale 3 puntos, el empate 1 punto y la derrota 0 puntos.\n",
+        "#\n",
+        "#    Nota: si la cantidad de goles marcados en un partido es mayor que los recibidos, el equipo ganó. En caso de ser\n",
+        "#    igual, el equipo empató, y si es menor, el equipo perdió. Para calcular el rendimiento, debemos hacer la razón\n",
+        "#    entre la puntuación del equipo y la puntuación máxima que podría recibir.\n",
+        "#\n",
+        "#Para la prueba, utiliza las siguientes listas de goles marcados y recibidos:\n",
+        "goles_marcados = [2, 1, 3, 1, 0]\n",
+        "goles_recibidos = [1, 2, 2, 1, 3]\n",
+        "# Texto probablemente mostrado:\n",
+        "# La puntuación del equipo fue `puntos` y su rendimiento fue `desempeno`%\"\n"
+      ],
+      "metadata": {
+        "id": "Rh3P86j863Qx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#9 - Te han desafiado a crear un código que calcule los gastos de un viaje a una de las cuatro ciudades desde Recife,\n",
+        "#      siendo ellas: Salvador, Fortaleza, Natal y Aracaju.\n",
+        "#    El costo diario del hotel es de 150 reales en todas ellas y el consumo de gasolina en el viaje en coche es de\n",
+        "#      14 km/l, siendo que el precio de la gasolina es de 5 reales por litro. Los gastos con paseos y alimentación\n",
+        "#      a realizar en cada una de ellas por día serían [200, 400, 250, 300], respectivamente.\n",
+        "#\n",
+        "#    Sabiendo que las distancias entre Recife y cada una de las ciudades son aproximadamente [850, 800, 300, 550] km,\n",
+        "#      crea tres funciones: la primera función calcula los gastos de hotel (gasto_hotel), la segunda calcula los gastos\n",
+        "#      de gasolina (gasto_gasolina) y la tercera los gastos de paseo y alimentación (gasto_paseo).\n",
+        "#\n",
+        "#    Para probar, simula un viaje de 3 días a Salvador desde Recife. Considera el viaje de ida y vuelta en coche.\n",
+        "#\n",
+        "# Texto probablemente mostrado:\n",
+        "# Con base en los gastos definidos, un viaje de [dias] días a [ciudad] desde\n",
+        "# Recife costaría [gastos] reales."
+      ],
+      "metadata": {
+        "id": "K8DVAyWG5lng"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Has comenzado una pasantía en una empresa que trabaja con procesamiento de lenguaje natural (NLP). Tu líder te\n",
+        "# solicitó que crees un fragmento de código que reciba una frase escrita por el usuario y filtre solo las palabras\n",
+        "# con un tamaño mayor o igual a 5, mostrándolas en una lista. Esta demanda se centra en el análisis del patrón de\n",
+        "# comportamiento de las personas al escribir palabras de esta cantidad de caracteres o más.\n",
+        "#\n",
+        "# Consejo: utiliza las funciones lambda y filter() para filtrar estas palabras. Recordando que la función integrada\n",
+        "# filter() recibe una función (en nuestro caso, una función lambda) y filtra un iterable según la función. Para tratar\n",
+        "# la frase, utiliza replace() para cambiar ',' '.', '!' y '?' por espacio.\n",
+        "#\n",
+        "#Utiliza la frase \"Aprender Python aquí en Alura es muy bueno\" para probar el código."
+      ],
+      "metadata": {
+        "id": "w93ywM1n5lYY"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
